variables.RunFour.scala.code
var biscuitrencontres:Int=0
while(biscuitrencontres<=4){
  avance()
  if (estsurbiscuit){
    biscuitrencontres=biscuitrencontres +1
  }
}